--- a/public/user.html
+++ b/public/user.html
@@ -13,7 +13,7 @@
     <div class="hero-body">
         <div class="container">
             <h1 class="title">
-                JWT Assignment
+                Final Project
             </h1>
             <button class="button is-dark is-rounded" disabled>
                 Connected
