Display whole JWT

--- a/public/user.html
+++ b/public/user.html
@@ -23,13 +23,17 @@
 </section>
 <section class="section">
     <div class="container">
-        <h3>Your JWT:</h3>
-        <pre id="jwt" class="is-2 has-text-centered">
-        </pre>
-        <br>
         <h3>Your User ID:</h3>
-        <pre id="userId" class="is-2 has-text-centered">
-        </pre>
+        <div class="box">
+            <pre id="userId" class="subtitle is-6 has-text-centered">
+            </pre>
+        </div>
+        <br>
+        <h3>Your JWT:</h3>
+        <div class="box">
+            <pre id="jwt" class="subtitle is-6">
+            </pre>
+        </div>
     </div>
 </section>
 <footer class="footer">
