Use utility classes instead of H3

--- a/public/user.html
+++ b/public/user.html
@@ -23,13 +23,13 @@
 </section>
 <section class="section">
     <div class="container">
-        <h3>Your User ID:</h3>
+        <p class="title is-6">Your User ID:</p>
         <div class="box">
             <pre id="userId" class="subtitle is-6 has-text-centered">
             </pre>
         </div>
         <br>
-        <h3>Your JWT:</h3>
+        <p class="title is-6">Your JWT:</p>
         <div class="box">
             <pre id="jwt" class="subtitle is-6">
             </pre>
